# LFU-cache

./: CMakeLists.txt  README.md  run_tests.py
include/: cache.hpp  ideal_cache.hpp  lfu_cache.hpp  lru_cache.hpp
src/: CMakeLists.txt  cache.cpp  ideal_cache.cpp  lfu_cache.cpp
test/: generate_tests.py
tests/: CMakeLists.txt  unit_tests.cpp
